B20-52, integrate complexes search in pdbe to get participants with uniprotId